update to 1.20.5 (WIP)