@@ -1,23 +1,26 @@
 package de.mari_023.ae2wtlib.networking;
 
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
+import io.netty.buffer.ByteBuf;
+
+import net.minecraft.network.codec.ByteBufCodecs;
+import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.entity.player.Player;
 
 import de.mari_023.ae2wtlib.AE2wtlib;
 
 public record UpdateRestockPacket(int slot, int amount) implements AE2wtlibPacket {
-
-    public static final ResourceLocation ID = AE2wtlib.id("update_restock");
-    public UpdateRestockPacket(FriendlyByteBuf buf) {
-        this(buf.readInt(), buf.readInt());
-    }
+    public static final Type<UpdateRestockPacket> ID = new Type<>(AE2wtlib.id("update_restock"));
+    public static final StreamCodec<ByteBuf, UpdateRestockPacket> STREAM_CODEC = StreamCodec.composite(
+            ByteBufCodecs.INT, UpdateRestockPacket::slot,
+            ByteBufCodecs.INT, UpdateRestockPacket::amount,
+            UpdateRestockPacket::new);
 
     @Override
     public void processPacketData(Player player) {
         switch (slot()) {
-            case Inventory.INVENTORY_SIZE -> player.getInventory().offhand.get(0).setCount(amount());
+            case Inventory.INVENTORY_SIZE -> player.getInventory().offhand.getFirst().setCount(amount());
             case -1 -> {
             }
             default -> player.getInventory().getItem(slot()).setCount(amount());
@@ -25,13 +28,7 @@ public record UpdateRestockPacket(int slot, int amount) implements AE2wtlibPacke
     }
 
     @Override
-    public void write(FriendlyByteBuf buf) {
-        buf.writeInt(slot());
-        buf.writeInt(amount());
-    }
-
-    @Override
-    public ResourceLocation id() {
+    public Type<? extends CustomPacketPayload> type() {
         return ID;
     }
 }
